<resources>
    <string name="app_name">清水河畔</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">登陆</string>
    <string name="sing_up">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_actvity">Login</string>
    <string name="wrong_account">账号或密码错误</string>
    <string name="wrong_network">网络连接失败</string>
    <string name="action_filter_main">帖子顺序</string>
    <string name="action_sorter_main">帖子顺序</string>
    <string name="action_sorter_main_new">最新发表</string>
    <string name="action_sorter_main_all">最新回复</string>
    <string name="action_login">登陆</string>

    <string name="trans_name_login">login</string>
    <string name="title_activity_post_list">PostListActivity</string>

    <string name="navigation_board_list">板块列表</string>
    <string name="title_activity_board_list">板块列表</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_retry">重试</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="navigation_news_list">今日热门</string>
    <string name="navigation_friend_list">我的好友</string>
    <string name="hint_new_topic_title">请输入标题</string>
    <string name="new_topic_classification">选择主题</string>
    <string name="hint_new_topic_content">请输入内容</string>
    <string name="action_add_pic">添加图片</string>
    <string name="action_send">发送</string>

    <string name="title_activity_big_image">BigImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="navigation_message">我的消息</string>
    <string name="activity_message">我的消息</string>
    <string name="title_reply_notify_post">回复评论</string>
    <string name="hint_topic_reply">回复评论</string>
    <string name="hint_send_pm">发送消息</string>
    <string name="hint_topic_commit">评论</string>
    <string name="action_chat">私信</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="pref_title_user">用户信息</string>
    <string name="pref_title_userinfo">Username</string>
    <string name="pref_title_image">图片加载设置</string>
    <string name="pref_title_notify">消息同步</string>
    <string name="action_order">浏览顺序</string>
    <string name="pref_layout">布局设置(重启生效)</string>
    <string name="action_at">at好友</string>
</resources>
