<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp"
        android:background="@color/colorWhite"

        android:layout_marginStart="@dimen/dialog_margin"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:transitionName="@string/trans_name_login">

        <TextView
            android:text="@string/login_actvity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:paddingBottom="@dimen/padding_normal"
            android:layout_marginStart="@dimen/spacing_normal"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/username"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:id="@+id/actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sing_up"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:visibility="gone"/>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                style="@style/Widget.AppCompat.Button.Colored"/>

        </FrameLayout>

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge"
            android:layout_marginBottom="@dimen/spacing_huge"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="gone"/>

    </LinearLayout>

</FrameLayout>
